fix contact message missing border

--- a/stylesheets/pages/contact.css
+++ b/stylesheets/pages/contact.css
@@ -25,6 +25,7 @@
 }
 
 .contact-text{
+    border: var(--border) dashed var(--foreground);
     flex: 1 0 auto;
     resize: none;
 }
